# moldy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING.md  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
apps/api/: README.md  compose.dev.yml  pyproject.toml  requirements-lock.txt  translation-requirements-lock.txt
apps/api/src/brand_api/: __init__.py  app.py  auth.py  carousel_composition.py  cli.py  config.py  db.py  exporters.py  intake_telemetry.py  layout_catalog.py  media.py  models.py  private_templates.py  storage.py  translation.py  unzip.py  worker.py
apps/api/src/brand_api/routes/: __init__.py  assets.py  campaigns.py  carousels.py  documents.py  intake.py  jobs.py  revisions.py
apps/api/tests/: conftest.py  test_app_auth.py  test_assets.py  test_campaigns.py  test_carousels.py  test_compile_api.py  test_db.py  test_documents.py  test_exporters.py  test_exports.py  test_font_resolution_intake.py  test_imports.py  test_layout_catalog.py  test_private_templates.py  test_revisions.py  test_sanity.py  test_storage.py  test_translation.py  test_unzip.py  test_walking_skeleton.py  test_worker.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: LICENSE
docs/adr/: 0001-persona-leigo-first.md  0002-stack-python-typescript.md  0003-licencas-agpl-app-mit-schema.md  0004-layouts-como-dados.md  0005-render-unica-preview-export.md  0006-revisao-de-marca-deterministica.md  0007-idioma-da-documentacao.md  0010-gramatica-de-composicao-editorial.md  0017-traducao-local-do-manual.md  (+2 more)
schemas/: artifact-instance.schema.json  brand-ir.schema.json  content-spec.schema.json  fix-plan.schema.json  fix-result.schema.json  guard-verdict.schema.json  layout-spec.schema.json
tools/: prepare_private_template_corpus.py  release_check.py  verify_release_checks.py
(+111 files in other folders)
