[project]
name = "brand-runtime-api"
version = "0.1.0"
description = "API HTTP do brand-runtime: intake, revisões, documentos e exports"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.6"]
translation = ["ctranslate2==4.8.1", "sentencepiece==0.2.2"]

[project.scripts]
brand-api = "brand_api.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brand_api = ["fonts/*.json", "native_templates/v1/*.pptx", "native_templates/v1/*.docx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
